--- a/index.html
+++ b/index.html
@@ -668,8 +668,7 @@
     const navSound = new Audio("https://assets.mixkit.co/active_storage/sfx/2571/2571-preview.mp3");
     navSound.volume = 0.3;
 
-    // --- CLASH ROYALE VERİ TABANI (TÜM KARTLAR) ---
-    // IDs are official Supercell API IDs for Deep Linking
+    // --- CLASH ROYALE VERİ TABANI (GÜNCEL ID'LER) ---
     const crData = [
         // --- COMMON (Sıradan) ---
         {id:26000000, n:"Knight", e:3, r:"common", t:"troop", role:"mini_tank"},
@@ -739,13 +738,15 @@
         {id:26000064, n:"Firecracker", e:3, r:"common", t:"troop", role:"anti_air"},
         {id:26000065, n:"Elixir Golem", e:3, r:"rare", t:"troop", role:"win_condition"},
         {id:26000066, n:"Battle Healer", e:4, r:"rare", t:"troop", role:"mini_tank"},
-        {id:26000067, n:"Skeleton King", e:4, r:"champion", t:"troop", role:"tank"},
-        {id:26000068, n:"Golden Knight", e:4, r:"champion", t:"troop", role:"mini_tank"},
-        {id:26000069, n:"Archer Queen", e:5, r:"champion", t:"troop", role:"anti_air"},
-        {id:26000072, n:"Mighty Miner", e:4, r:"champion", t:"troop", role:"tank_killer"},
+        
+        // Corrected IDs for Champions and Spirits
+        {id:26000069, n:"Skeleton King", e:4, r:"champion", t:"troop", role:"tank"},
+        {id:26000074, n:"Golden Knight", e:4, r:"champion", t:"troop", role:"mini_tank"},
+        {id:26000072, n:"Archer Queen", e:5, r:"champion", t:"troop", role:"anti_air"},
+        {id:26000085, n:"Mighty Miner", e:4, r:"champion", t:"troop", role:"tank_killer"},
         {id:26000080, n:"Skeleton Dragons", e:4, r:"common", t:"troop", role:"anti_air"},
-        {id:26000084, n:"Mother Witch", e:4, r:"legendary", t:"troop", role:"support"},
-        {id:26000085, n:"Electro Spirit", e:1, r:"common", t:"troop", role:"cycle"},
+        {id:26000083, n:"Mother Witch", e:4, r:"legendary", t:"troop", role:"support"}, // Correct ID
+        {id:26000084, n:"Electro Spirit", e:1, r:"common", t:"troop", role:"cycle"}, // Correct ID
         {id:26000093, n:"Little Prince", e:3, r:"champion", t:"troop", role:"anti_air"},
         {id:26000087, n:"Phoenix", e:4, r:"legendary", t:"troop", role:"anti_air"},
         {id:26000088, n:"Monk", e:5, r:"champion", t:"troop", role:"tank"},
@@ -766,7 +767,7 @@
         {id:28000012, n:"Clone", e:3, r:"epic", t:"spell", role:"utility"},
         {id:28000013, n:"Earthquake", e:3, r:"rare", t:"spell", role:"big_spell"},
         {id:28000014, n:"Barbarian Barrel", e:2, r:"epic", t:"spell", role:"small_spell"},
-        {id:28000015, n:"Heal Spirit", e:1, r:"rare", t:"troop", role:"cycle"}, // Corrected ID type
+        {id:26000068, n:"Heal Spirit", e:1, r:"rare", t:"troop", role:"cycle"}, // FIXED: Heal Spirit is a TROOP (26...) not Spell (28...)
         {id:28000016, n:"Giant Snowball", e:2, r:"common", t:"spell", role:"small_spell"},
         {id:28000017, n:"Royal Delivery", e:3, r:"common", t:"spell", role:"defense"},
         
